fix nav option common problems text wrapping on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,10 @@ ul li a {
     text-decoration: underline;
 }
 
+.mobile-only {
+    display: none;
+}
+
 /* ------------------------- hero image and overlay text ---------------------- */
 
 #hero-container {
@@ -516,6 +520,10 @@ td {
     #navigation-list li {
         text-align: center;
     }
+
+    .mobile-only {
+        display: none;
+    }
 }
 
 /* responsive design - tablet */
@@ -747,6 +755,10 @@ td {
         margin-bottom: 15px;
     }
 
+    .mobile-only {
+        display: initial;
+    }
+
     #hero-container {
         max-width: 100%;
         max-height: 450px;
@@ -803,11 +815,9 @@ td {
         justify-content: center;
         margin: 0;
         padding: 0.5;
-
-    }
-    
-    .fridge-video {
-        max-width: 100vw;
     }
 
+    .problems {
+        width: 100%;
+    }
 } 
